# chess

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile
assets/themes/: default.ini  neon.ini
include/: Board.hpp  Game.hpp  GameState.hpp  Piece.hpp
include/managers/: TransitionManager.hpp
include/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
include/shared/: Transition.hpp
src/: Board.cpp  Board.hpp  EventDispatcher.cpp  EventDispatcher.hpp  Game.cpp  Game.hpp  GameData.hpp  GameState.cpp  GameState.hpp  Move.hpp  Piece.cpp  Piece.hpp  Sidebar.cpp  Sidebar.hpp  Time.hpp  UIManager.cpp  UIManager.hpp  Window.cpp  Window.hpp  main.cpp
src/config/: Layout.hpp
src/managers/: CursorManager.cpp  EventDispatcher.cpp  EventDispatcher.hpp  FontManager.cpp  FontManager.hpp  SoundManager.cpp  SoundManager.hpp  TextureManager.cpp  ThemeManager.cpp  ThemeManager.hpp  TransitionManager.cpp  UIManager.cpp  UIManager.hpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/shared/: CursorManager.hpp  EventContext.hpp  EventHandler.hpp  EventResult.hpp  Events.hpp  FontManager.cpp  FontManager.hpp  GameData.hpp  Move.hpp  Notation.cpp  Notation.hpp  PieceKind.hpp  PropertyTransition.cpp  PropertyTransition.hpp  Side.hpp  TextureManager.cpp  TextureManager.hpp  Transition.hpp  UIComponent.cpp  UIComponent.hpp  VertexShapes.cpp  VertexShapes.hpp
src/utils/: ColorUtils.hpp  TextureManager.cpp  TextureManager.hpp  UIComponent.cpp  (+1 more)
(+113 files in other folders)
